k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - digraph.app
    secretName: digraph-tls
  rules:
  - host: digraph.app
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 3001
